[package]
name = "dsl_cli"
version = "0.1.0"
edition = "2024"

[lib]

[workspace]
resolver = "2"
members = [
    "packages/cli_core",
    "packages/cli_macro"
]

[dependencies]
cli_macro = { path = "packages/cli_macro" }
cli_core = { path = "packages/cli_core" }

[[example]]
name = "string_utils"
path = "examples/string_utils.rs"
