[package]
name = "dsl_cli"
description = "A small proc-macro DSL for defining command-line interfaces."
categories = ["command-line-interface"]
keywords = [
  "argument",
  "cli",
  "arg",
  "parser",
  "parse"
]
version = "0.1.0"
readme = "./README.md"
edition = {workspace = true}
license = {workspace = true}
repository = {workspace = true}

[lib]

[workspace]
resolver = "2"
members = [
    "packages/dsl_cli_core",
    "packages/dsl_cli_macro"
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/rarescovei5/dsl_cli"

[dependencies]
dsl_cli_macro = { version = "0.1.0", path = "packages/dsl_cli_macro" }
dsl_cli_core = { version = "0.1.0", path = "packages/dsl_cli_core" }

[[example]]
name = "string_utils"
path = "examples/string_utils.rs"
